--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,1 @@
-fastapi>=0.100.0
-uvicorn[standard]>=0.20.0
-pydantic>=2.0.0
-pytest>=7.0.0
-pytest-asyncio>=0.20.0
-requests>=2.25.0
-python-multipart>=0.0.5
-httpx>=0.20.0
-streamlit>=1.28.0
-pandas>=1.5.0
-plotly>=5.15.0
+streamlit==1.28.1
