--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit>=1.28.0
-pandas>=1.5.0
-plotly>=5.15.0
-fastapi>=0.100.0
-uvicorn>=0.20.0
-pydantic>=2.0.0
+# Streamlit Cloud compatible dependencies (distro dojo unified)
+streamlit==1.28.1
+pandas==1.5.3
+plotly==5.17.0
+pydantic==2.5.0
